# ESP-Miner

./: .clangd  .gitignore  .pre-commit-config.yaml  ACSconfig-601.cvs  AGENTS.md  CHANGELOG-FORK.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  SCHEMATIC.md  Stratumv1.1_Protocol_Test_Tool.py  Stratumv1_Protocol_Test_Tool.py  autotune.md  config-102.cvs  config-1200x.cvs  config-1300.cvs  config-201.cvs  config-202.cvs  config-203.cvs  config-204.cvs  config-205.cvs  config-207.cvs  config-302.cvs  config-303.cvs  config-400.cvs  config-401.cvs  config-402.cvs  config-403.cvs  config-601.cvs  config-601a.cvs  config-602.cvs  config-610.cvs  config-700.cvs  config-701.cvs  config-702.cvs  config-800x.cvs  config-801.cvs  config-900.cvs  config-custom-1368.cvs  config-custom.cvs  (+11 more)
.devcontainer/: Dockerfile
.github/workflows/: angular-tests.yml  build.yml  codeql.yml  publish-acs-esp-miner-firmware.yml  publish-acs-esp-miner-webapp.yml  publish-web-app.yml  release-beta.yml  release-factory-beta.yml  release-factory.yml  release.yml  unittest.yml
Firmware_Versions/: README.md
bootloader_components/log_capture/: CMakeLists.txt  bootloader_log_capture.c  force_link.ld  project_include.cmake
build-gateway-mac/: CMakeCache.txt  Makefile  cmake_install.cmake  gateway
components/asic/: CMakeLists.txt  asic.c  asic_common.c  bm1340.c  bm1366.c  bm1368.c  bm1370.c  bm1373.c  bm1397.c  common.c  crc.h  frequency_transition_bmXX.c  serial.c  voltage_monitor.c
components/asic/include/: asic.h  asic_common.h  bm1340.h  bm1366.h  bm1368.h  bm1370.h  bm1373.h  bm1397.h  common.h  frequency_transition_bmXX.h  serial.h  voltage_monitor.h
components/asic/test/: CMakeLists.txt  test_job_command.c  test_serial.c
components/connect/: CMakeLists.txt  connect.c  usb_net.c
components/dns_server/: dns_server.c
components/gateway/: CMakeLists.txt
components/http_auth/: CMakeLists.txt  http_auth.c
components/influx/: CMakeLists.txt  influx.c
components/prometheus_format/: CMakeLists.txt  prometheus_format.c
components/stratum/: CMakeLists.txt  coinbase_decoder.c  gridpool_direct_builder.c  local_work_builder.c  mining.c  stratum_api.c  stratum_socket.c  utils.c
components/stratum/include/: coinbase_decoder.h  gridpool_direct_builder.h  local_work_builder.h  mining.h  stratum_api.h  utils.h
components/stratum/test/: test_base58.c  test_bech32.c  test_coinbase_decoder.c  test_gridpool_direct_builder.c  test_local_work_builder.c  test_mining.c  test_stratum_json.c  test_utils.c
components/stratum_v2/: CMakeLists.txt  sv2_noise.c  sv2_protocol.c
contrib/: grafana-dashboard.json
doc/: VOLTAGE_MONITORING.md  axeos-i18n-glossary.md  axeos-i18n.md  gamma_predictive_efficiency.md  gridpool-direct-block-submit-and-ui-notes.md  gridpool-direct-client-spec.md  gridpool-direct-m1-measurements.md  gridpool-direct-m2-esp32-template-measurements.md  gridpool-direct-m3-end-to-end-measurements.md  ollama_research_agent.md  web-authentication.md
gateway/include/: gateway_core.h  gateway_platform.h  gateway_types.h  miner_adapter.h  wslink.h
gateway/platform/esp32/: CMakeLists.txt  gateway_platform_esp32.c  gateway_platform_esp32.h
gateway/platform/macos/: CMakeLists.txt  gateway_main.c  gateway_platform_macos.c
gateway/src/: gateway_core.c  miner_adapter.c  wslink.c
main/: CMakeLists.txt  Kconfig.projbuild  accepted_led.c  accepted_led.h  asic_task_module.h  autotune_task.c  autotune_task.h  default_screens.h  device_config.c  device_config.h  display.c  display.h  display_config.c  display_config.h  filesystem.c  filesystem.h  font_fmtowns_8x16_data.c  global_state.h  gridpool_status_client.c  gridpool_status_client.h  i2c_bitaxe.c  i2c_bitaxe.h  idf_component.yml  input.c  local_work_client.c  local_work_client.h  log_buffer.c  log_buffer.h  logo.c  lv_conf.h  lv_font_nix8810_m15.c  lv_font_portfolio-6x8.c  lvglDisplay.c  lvglDisplay.h  lvglDisplayBAP.c  lvglDisplayBAP.h  main.c  main.h  mempoolAPI.c  mempoolAPI.h  (+25 more)
main/bap/: bap.c  bap.h  bap_handlers.c  bap_handlers.h  bap_protocol.c  bap_protocol.h  bap_subscription.c  bap_subscription.h  bap_uart.c  bap_uart.h
main/database/: README.md  dataBase.c  dataBase.h
main/http_server/: APIreadme.md  http_auth.c  http_auth.h  http_cors.c  http_cors.h  http_server.c  http_server.h  openapi.yaml  recovery_page.html  sv2_connection_test.c  sv2_connection_test.h  system_api_json.c  system_api_json.h  theme_api.c  theme_api.h  websocket.c  websocket.h  websocket_api.c  websocket_api.h
main/images/: README.md
main/logging/: logging.c  logging.h
main/power/: INA260.c  INA260.h  TPS546.c  TPS546.h  asic_init.c  asic_init.h  mining_control.c  mining_control.h  power.c  power.h  vcore.c  vcore.h
main/power_management/: autotune_state.c  autotune_state.h  overheat.c  overheat.h  power_management_calc.c  power_management_calc.h
main/self_test/: self_test.c  self_test.h
main/tasks/: asic_result_task.c  asic_result_task.h  asic_task.c  asic_task.h  autotune_task.c  autotune_task.h  create_jobs_task.c  fan_controller_task.c  gateway_task.c  gateway_task.h  hashrate_monitor_task.c  hashrate_monitor_task.h  influx_task.c  influx_task.h  miner_adapter.c  miner_adapter.h  power_management_task.c  power_management_task.h  protocol_coordinator.c  protocol_coordinator.h  scoreboard.c  statistics_task.c  statistics_task.h  (+12 more)
mock-server/: README.md  package-lock.json  package.json  voltage-monitor-mock.js
scripts/: pre-commit-checks.sh  run-host-tests.sh
test/: CMakeLists.txt  sdkconfig.defaults
test/host/: CMakeLists.txt  test_autotune_state.c  test_infrastructure.c  test_logging.c  test_main.c  test_overheat.c  test_power_management_calc.c  unity_config.h
test/host/fakes/: fake_time.c  fake_time.h
test/host/mocks/: mock_nvs.c  mock_nvs.h
test/host/stubs/: esp_err.c  esp_err.h  esp_log.h  esp_timer.h
test/host/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
tools/: bitaxe_ollama_research_agent.py  control.html  embed_web_ui.py  gridpool_m1_probe.py  lvgl_image.py  relay_server.py  test_server.py  upload2device.py
(+284 files in other folders)
